<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="infosw.agenda.com.agendamedica.MainActivity"

    android:orientation="vertical">

    <TextView
        style="@style/Main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_logo"
        android:src="@drawable/dr_mario"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        >


        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/new_date"
            android:background="@color/ButtonSuccess"
            android:id="@+id/enter"
            android:textColor="@color/ButtonFont"
            style="?android:attr/borderlessButtonStyle"
            android:onClick="getStarted"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/patients"
            android:background="@color/ButtonSuccess"
            android:textColor="@color/ButtonFont"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="right"
            android:onClick="createPatient"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:background="@color/ButtonSuccess"
            android:textColor="@color/ButtonFont"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="right"
            android:onClick=""
            />


    </LinearLayout>




</LinearLayout>
